# dosya_paylasim

./: .gitignore  CMakeLists.txt
app/: main.c
cpp-cmake-ctest-template-main/build_win/: testResults_windows.html  testResults_windows.xml
cpp-cmake-ctest-template-main/docs/coverxygenlibwin/: lcov_doxygen_lib_win.info
cpp-cmake-ctest-template-main/docs/coverxygentestwin/: lcov_doxygen_test_win.info
cpp-cmake-ctest-template-main/docs/doxygenlibwin/html/: _r_e_a_d_m_e_8md.html  annotated.html  calculator_8cpp.html  calculator_8cpp__incl.dot  calculator_8cpp__incl.md5  calculator_8h.html  calculator_8h__dep__incl.dot  calculator_8h__dep__incl.md5  calculator_8h__incl.dot  calculator_8h__incl.md5  calculator_8h_source.html  calculatorapp_8cpp.html  calculatorapp_8cpp__incl.dot  calculatorapp_8cpp__incl.md5  calculatorapp_8h.html  calculatorapp_8h_source.html  class_coruh_1_1_calculator_1_1_calculator-members.html  class_coruh_1_1_calculator_1_1_calculator.html  class_coruh_1_1_calculator_1_1_calculator__coll__graph.dot  class_coruh_1_1_utility_1_1_math_utility-members.html  class_coruh_1_1_utility_1_1_math_utility.html  classes.html  common_types_8h.html  common_types_8h__dep__incl.dot  common_types_8h__dep__incl.md5  common_types_8h__incl.dot  common_types_8h__incl.md5  common_types_8h_source.html  dir_000000_000011.html  dir_000001_000000.html  dir_000003_000011.html  dir_000008_000003.html  dir_000009_000000.html  dir_000010_000005.html  dir_03600fe870a66f144387b5b933c0a262.html  dir_03600fe870a66f144387b5b933c0a262_dep.dot  dir_056cb1df8fcfab4ad951dd28d3fe50e2.html  dir_056cb1df8fcfab4ad951dd28d3fe50e2_dep.md5  dir_1a4afde38d913d075a0b415f5c06232f.html  dir_46f07a387fb7605f3f89f7813a6285d3.html  (+36 more)
cpp-cmake-ctest-template-main/docs/doxygenlibwin/latex/: _r_e_a_d_m_e_8md.tex  annotated.tex  calculator_8cpp.tex  calculator_8cpp__incl.dot  calculator_8cpp__incl.md5  calculator_8h.tex  calculator_8h__dep__incl.dot  calculator_8h__dep__incl.md5  calculator_8h__incl.dot  calculator_8h__incl.md5  calculator_8h_source.tex  calculatorapp_8cpp.tex  calculatorapp_8cpp__incl.dot  calculatorapp_8cpp__incl.md5  calculatorapp_8h.tex  calculatorapp_8h_source.tex  class_coruh_1_1_calculator_1_1_calculator.tex  (+36 more)
lib/: alert.c  alert.h  cJSON.h  file_ops.c  file_ops.h  graph.c  graph.h  hash_table.c  hash_table.h  history.c  history.h  linkedlist.c  linkedlist.h  queue.c  queue.h  sparse_matrix.c  sparse_matrix.h  stack.c  stack.h  weather_data.c  weather_data.h  xor_linked_list.c  xor_linked_list.h
test/: test_alert.cpp  test_graph.cpp  test_hash_table.cpp  test_linkedlist.cpp  test_queue.cpp  test_sparse_matrix.cpp  test_stack.cpp  test_xor_linked_list.cpp
(+210 files in other folders)
